src/styless/_portfolio.scss
#imacon{
    display: inline-block;
    top: 10vh;
    left: -33vw;
    

    #imlepa{
        display: inline-block;
        position: absolute;
        
    }

    #imle{
        margin-top: 11vh;
        display: inline-block;
        left: 10vw;
        top: 1.5vh;

        #coloroverMa{
            
            height: 30vh;
            width: 28vw;
            background-color: black;
        }

        #coloroverFr{
            margin-top: 11vh;
            height: 30vh;
            width: 28vw;
            background-color: black;
        }

        
        img{
            height: 30vh;
            width: 28vw;
            cursor: pointer;
            &:hover{
                opacity: 0.5;
            }
           
        }

        button{
            top: 3.3vh;
            height: 5.5vh;
            background-color: #30b069;
            border-radius: 6px;
            &:hover{
                color: #073042;
            }
            margin-bottom: 17vh;
        }

        

        height: 20vh;
        width: 17vh;
    }

   #imrepa{
       display: inline-block;
       position: absolute;
       
   }

    #imre{
        display: inline-block;
        left: 47vw;
        top: 1.5vh;
        
        #coloroverRe{
            margin-top: 11vh;
            height: 30vh;
            width: 28vw;
            &:hover{
                background-color: black;
            }
        }

        img{
            margin-top: 0vh;
            height: 30vh;
            width: 28vw;
            cursor: pointer;
            &:hover{
                opacity: 0.5;
            }
            
        }

        button{
            top: 3.3vh;
            left: 0vw;
            height: 5.5vh;
            background-color: #30b069;
            border-radius: 6px;
            &:hover{
                color: #073042;
            }
            
        }
        height: 20vh;
        width: 17vh;
        
    }

}

@media screen and (max-width:600px) {

   #imacon{
    #imle{
        img{
            position: relative;
            left: -34.2vw;
            width: 97vw;
        }
    }

    #imre{
        img{
            position: relative;
            left: -34.2vw;
            width: 97vw;
        }
    }
    
   }

    #imlepa{
        
        display: block;
        
    }

    #imrepa{
        margin-top: 6vh;
        left: -40vw;
        top: 125vh;
        display: block;
        
    }
}

